@@ -3,9 +3,9 @@
 Benutzer
 ========
 
-Benutzer Daten werden mit dem ``@ogds-user`` Endpoint abgefragt. Dieser Endpoint unterstützt nur das GET und erwartet als Pfad-Argument die ID des Benutzers und wird auf dem Kontakt Folder abgefragt. Die URL setzt sich somit folgendermassen zusammen:
+Benutzer Daten werden mit dem ``@ogds-users`` Endpoint abgefragt. Dieser Endpoint unterstützt nur das GET und erwartet als Pfad-Argument die ID des Benutzers und wird auf dem Kontakt Folder abgefragt. Die URL setzt sich somit folgendermassen zusammen:
 
-``http://example.org/fd/kontakte/@ogds-user/peter.mueller``
+``http://example.org/fd/kontakte/@ogds-users/peter.mueller``
 
 Ein Benutzer wird lediglich durch einen Eintrag in der SQL Datenbank repräsentiert und ist kein Plone Inhaltstyp. Deshalb beinhaltet die Response weniger Information als für andere Inhaltstypen.
 
@@ -13,7 +13,7 @@ Ein Benutzer wird lediglich durch einen Eintrag in der SQL Datenbank repräsenti
 
    .. sourcecode:: http
 
-      GET /@ogds-user/peter.mueller HTTP/1.1
+      GET /@ogds-users/peter.mueller HTTP/1.1
       Accept: application/json
 
 **Beispiel-Response**:
@@ -25,7 +25,7 @@ Ein Benutzer wird lediglich durch einen Eintrag in der SQL Datenbank repräsenti
       Content-Type: application/json
 
       {
-        "@id": "http://example.org/fd/kontakte/@ogds-user/peter.mueller",
+        "@id": "http://example.org/fd/kontakte/@ogds-users/peter.mueller",
         "@type": "virtual.ogds.user",
         "active": true,
         "address1": null,
@@ -100,7 +100,7 @@ Ein Team wird lediglich durch einen Eintrag in der SQL Datenbank repräsentiert 
         "title": "afi_benutzer",
         "users": [
             {
-                "@id": "http://localhost:8080/fd/kontakte/@ogds-user/peter.mueller",
+                "@id": "http://localhost:8080/fd/kontakte/@ogds-users/peter.mueller",
                 "@type": "virtual.ogds.user",
                 "active": true,
                 "...": "..."
