@@ -351,7 +351,7 @@
       method="GET"
       for="opengever.contact.interfaces.IContactFolder"
       factory=".ogdsuser.OGDSUserGet"
-      name="@ogds-user"
+      name="@ogds-users"
       permission="zope2.View"
       />
 
