@@ -33,7 +33,7 @@ class TestTeamGet(IntegrationTestCase):
              u'org_unit_title': u'Finanz\xe4mt',
              u'team_id': 1,
              u'title': u'Projekt \xdcberbaung Dorfmatte',
-             u'users': [{u'@id': u'http://nohost/plone/kontakte/@ogds-user/kathi.barfuss',
+             u'users': [{u'@id': u'http://nohost/plone/kontakte/@ogds-users/kathi.barfuss',
                          u'@type': u'virtual.ogds.user',
                          u'active': True,
                          u'department': u'Staatskanzlei',
@@ -47,7 +47,7 @@ class TestTeamGet(IntegrationTestCase):
                          u'phone_office': u'012 34 56 78',
                          u'title': u'B\xe4rfuss K\xe4thi',
                          u'userid': u'kathi.barfuss'},
-                        {u'@id': u'http://nohost/plone/kontakte/@ogds-user/robert.ziegler',
+                        {u'@id': u'http://nohost/plone/kontakte/@ogds-users/robert.ziegler',
                          u'@type': u'virtual.ogds.user',
                          u'active': True,
                          u'department': None,
